# fluid-sbi

./: .dockerignore  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  compose.yml  docker-compose.yml  pyproject.toml
.claude/commands/: commit.md
.devcontainer/: devcontainer.json
.serena/: project.yml
data/: .gitignore  .gitkeep  cylinder_100.geom  cylinder_64.geom  cylinder_64_offset.geom  cylinder_96.geom  cylinder_96_large_offset.geom  cylinder_r04.geom  cylinder_r06.geom  cylinder_y_m01.geom  cylinder_y_m02.geom  cylinder_y_p02.geom  gen_baseline.geom  gen_r025.geom  gen_r04.geom  gen_r06.geom  gen_r075.geom  gen_y_m01.geom  gen_y_m02.geom  gen_y_m10.geom  gen_y_p02.geom  gen_y_p10.geom
docs/: IBPM_to_SDA_data_conversion.md  data_management.md  ibpm_generalization_experiment.md  ibpm_resolution_strategy_v2.md  ibpm_resolution_workflow_example.md  kolmogorov_experiment_workflow_summary.md  kolmogorov_flow_simulation_guide.md  kolmogorov_notebooks_experiments_guide.md  kolmogorov_training_detailed_analysis.md  sda_kolmogorov_documentation.md  sda_resolution_flexibility.md  sda_resolution_flexibility_evidence.md  sda_technical_documentation.md
docs/general/: CHANGELOG_resize_removal.md  markov_blanket_usage_analysis.md  python_development_setup.md  runs_directory_structure.md  sda_model_architecture_training_guide.md  sda_package_metadata_documentation.md
docs/ibpm/: IBPM.md  INVESTIGATION_REPORT.md  KOLMOGOROV_VS_IBPM_COMPARISON.md  TROUBLESHOOTING.md  gaussian_score_scaling_issue.md  ibpm_data_generation_verification.md  ibpm_execution_environment.md  ibpm_experiment_conditions.md  ibpm_quick_reference.md  ibpm_resolution_guide.md  ibpm_resolution_strategy.md  reconstruction_experiment_strategy.md
docs/kolmogorov/: kolmogorov_notebooks_experiments_guide.md  sda_kolmogorov_architecture.md
docs/latent_sda/: latent_sda.md
infra/slurm/config/: gres.conf  slurm.conf
scripts/: convert_ibpm_to_sda.py  plot_ibpm_h5.py  plot_ibpm_raw.py  register_existing_datasets.py  run_ibpm_generalization.sh  setup.sh  verify_data.py
scripts/slurm/: cancel-all.sh  describe.sh  last.sh  log.sh  q.sh  sacct.sh  watch.sh
tests/: conftest.py  test_config.py  test_console.py  test_logging.py
